chore(circleci): ignore audit exit code
Ironically, these vulnerabilities come down to the `npm` package not
updating their dependencies with these fixes.

Temporarily ignore `npm audit` exit code, in order to release new
versions until npm figures things out.

https://github.com/nodejs/node-gyp/issues/1717
https://github.com/sass/node-sass/issues/2625

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           name: NPM Audit
           command: |
             npm -v
-            npm audit
+            npm audit || true
 
   test:
     docker:
